{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 49,
  "lineage": "3a73b624-9e21-86bd-3f95-1e52497c9d4c",
  "resources": [
    {
      "module": "module.pb-app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "pb_infra_instance",
      "provider": "module.pb-app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d53d72369335a9d6",
            "arn": "arn:aws:ec2:us-west-1:326151034032:instance/i-0f79dac7085027f97",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f79dac7085027f97",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-082be1a9ba110634d",
            "private_dns": "ip-10-0-1-215.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.215",
            "public_ip": "13.52.61.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04c1946f6ab4d5c82",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0370f46858119b3fd",
            "tags": {
              "Name": "pb-instance"
            },
            "tags_all": {
              "Name": "pb-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0416c9e4719797d42"
            ]
          },
          "dependencies": [
            "module.pb-app.aws_security_group.pb_sg",
            "module.pb-app.aws_subnet.pb_subnet",
            "module.pb-app.aws_vpc.pb_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pb-app",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.pb-app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:326151034032:internet-gateway/igw-074d19c131f0c2060",
            "id": "igw-074d19c131f0c2060",
            "owner_id": "326151034032",
            "tags": {
              "Name": "pb-igw"
            },
            "tags_all": {
              "Name": "pb-igw"
            },
            "vpc_id": "vpc-08cedc3f70eefca18"
          },
          "dependencies": [
            "module.pb-app.aws_vpc.pb_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pb-app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.pb-app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:326151034032:route-table/rtb-0c597b0cc3f37a1bf",
            "id": "rtb-0c597b0cc3f37a1bf",
            "owner_id": "326151034032",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074d19c131f0c2060",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pb-public-route-table"
            },
            "tags_all": {
              "Name": "pb-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cedc3f70eefca18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pb-app.aws_internet_gateway.igw",
            "module.pb-app.aws_vpc.pb_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pb-app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pb_subnet",
      "provider": "module.pb-app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c1191a455e39b0d",
            "route_table_id": "rtb-0c597b0cc3f37a1bf",
            "subnet_id": "subnet-0370f46858119b3fd"
          },
          "dependencies": [
            "module.pb-app.aws_internet_gateway.igw",
            "module.pb-app.aws_route_table.public",
            "module.pb-app.aws_subnet.pb_subnet",
            "module.pb-app.aws_vpc.pb_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pb-app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pb_sg",
      "provider": "module.pb-app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:326151034032:security-group/sg-0416c9e4719797d42",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0416c9e4719797d42",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240822141846312600000001",
            "name_prefix": "terraform-",
            "owner_id": "326151034032",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08cedc3f70eefca18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pb-app.aws_vpc.pb_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pb-app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pb_subnet",
      "provider": "module.pb-app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:326151034032:subnet/subnet-0370f46858119b3fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0370f46858119b3fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326151034032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pb-subnet"
            },
            "tags_all": {
              "Name": "pb-subnet"
            },
            "vpc_id": "vpc-08cedc3f70eefca18"
          },
          "dependencies": [
            "module.pb-app.aws_vpc.pb_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pb-app",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pb_vpc",
      "provider": "module.pb-app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:326151034032:vpc/vpc-08cedc3f70eefca18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ca4aba23649bb994",
            "default_route_table_id": "rtb-0998280d1b1f648f4",
            "default_security_group_id": "sg-0e8ec00c9ec3fb139",
            "dhcp_options_id": "dopt-0f988fb12e37fdaf4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08cedc3f70eefca18",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0998280d1b1f648f4",
            "owner_id": "326151034032",
            "tags": {
              "Name": "pb-vpc"
            },
            "tags_all": {
              "Name": "pb-vpc"
            }
          }
        }
      ]
    }
  ]
}